# librdkafka-examples-cpp

./: README.md
simple-producer-consumer/: CMakeLists.txt  Dockerfile  README.md  docker-compose-core.yml  docker-compose-pc.yml
simple-producer-consumer/src/: consumer.cpp  producer.cpp
